# edromufu

./: .gitignore  404.html  LICENSE  README.md  h --set-upstream origin bhv-2023  index.html  sitemap.xml
blog/: atom.xml  index.html  rss.xml
src/behaviour/bhv_antigo/behaviour_msgs/: CMakeLists.txt  package.xml
src/behaviour/bhv_antigo/behaviour_msgs/include/behaviour_msgs/: BehaviourStates.hpp
src/behaviour/bhv_antigo/behaviour_msgs/msg/: ActionMsg.msg  GameControllerMsg.msg  GameControllerPlayerMsg.msg  GameControllerTeamMsg.msg  GameState.msg  PIDHeadMsg.msg  StateMachineActionsMsg.msg  simMovMsg.msg
src/behaviour/bhv_antigo/behaviour_msgs/srv/: ActionPanelSrv.srv  GameControllerSrv.srv  service_page.srv  yamlTransitionSrv.srv
src/behaviour/modularized_bhv_msgs/: CMakeLists.txt  package.xml
src/behaviour/modularized_bhv_msgs/msg/: CurrentStateMsg.msg  GameControllerMsg.msg  stateMachineMsg.msg
src/behaviour/ros2_change/src/imu_ros_arduino/: package.xml  setup.py
src/behaviour/ros2_change/src/modularized_bhv_msgs/: CMakeLists.txt  package.xml
src/behaviour/ros2_change/src/sensor_observer/: package.xml  setup.py
src/behaviour/ros2_change/src/states_routine/: package.xml  setup.cfg
src/movement/Ros2_change/src/humanoid_definition/: package.xml  setup.cfg  setup.py
src/movement/Ros2_change/src/kinematic_functions/: package.xml  setup.cfg  setup.py
src/movement/Ros2_change/src/movement_core/: package.xml  setup.cfg  setup.py
src/movement/Ros2_change/src/movement_functions/: package.xml  setup.cfg  setup.py
src/movement/Ros2_change/src/movement_pages/: package.xml  setup.cfg  setup.py
src/movement/Ros2_change/src/u2d2_comm/: package.xml  setup.cfg  setup.py
src/movement/Ros2_change/src/urdf_robox/: CMakeLists.txt  package.xml
src/movement/movement_msgs/: CMakeLists.txt  package.xml
src/movement/movement_msgs/msg/: ApprovedMovementMsg.msg  HeadParamsMsg.msg  OpencmResponseMsg.msg  WalkCreatorRequestMsg.msg  WalkingPositionsMsg.msg  WebotsRequestMsg.msg
src/movement/movement_msgs/srv/: BehRequestSrv.srv  CommandToOpenCMSrv.srv  WalkTestParametersSrv.srv
src/movement/movement_utils/: CMakeLists.txt  package.xml
src/movement/movement_utils/launch/: movement.launch  movement_start.launch
src/movement/movement_utils/msg/: body_motors_data.msg
src/movement/movement_utils/pages/: first_pose_106.txt  first_pose_64.txt  kick_106.txt  left_arm_64.txt  left_fall_64.txt  right_arm_64.txt  right_fall_64.txt
src/movement/movement_utils/srv/: balance.srv  gait.srv  head_feedback.srv  page.srv  vx.srv  walk_forward.srv
src/movement/movement_utils/walk_test_jsons/: default.json  default_backup.json  walk.json  walk_01.json
src/movement/walk_creator/: CMakeLists.txt  package.xml
src/movement/walk_creator/src/: walk_creator.cpp  walk_creator.h
src/simulacao/webots_natasha/: CMakeLists.txt  package.xml
src/simulacao/webots_natasha/config/: game_controller.yaml  game_controller_settings.yaml  game_settings.yaml  joint_names_webots_natasha.yaml
src/simulacao/webots_natasha/launch/: display.launch  game_controller.launch  game_controller_settings.yaml  gazebo.launch  natasha_webots.launch  start_controller.launch  start_simulation.launch
src/simulacao/webots_natasha/meshes/: CAM_link.STL  HEAD_0_link.STL  HEAD_1_link.STL  LARM_0_link.STL  LARM_1_link.STL  LARM_2_link.STL  LFOOT_link.STL  LLEG_0_link.STL  LLEG_1_link.STL  LLEG_2_link.STL  LLEG_3_link.STL  LLEG_4_link.STL  RARM_0_link.STL  RARM_1_link.STL  RARM_2_link.STL  RFOOT_link.STL  RLEG_0_link.STL  RLEG_1_link.STL  RLEG_2_link.STL  RLEG_3_link.STL  RLEG_4_link.STL  TRUNK.STL
src/simulacao/webots_natasha/protos/: .Natasha.cache  .WebotsNatasha.cache  .WhiteGrass.cache
src/simulacao/webots_natasha/protos/Natasha_meshes/: Natasha_BTRUNK_linkMesh1b.proto  Natasha_BTRUNK_linkMesh1r.proto  Natasha_FTRUNK_linkMesh2b.proto  Natasha_FTRUNK_linkMesh3r.proto  Natasha_FTRUNK_linkMesh4b.proto  Natasha_LARM_0_linkMesh.proto  Natasha_LARM_1_linkMesh.proto  Natasha_LFOOT_linkMesh.proto  Natasha_LLEG_0_linkMesh.proto  Natasha_LLEG_1_linkMesh.proto  Natasha_LLEG_2_linkMesh.proto  Natasha_LLEG_3_linkMesh.proto  Natasha_RARM_0_linkMesh.proto  Natasha_RARM_2_linkMesh_red.proto  Natasha_RFOOT_linkMesh.proto  Natasha_RLEG_0_linkMesh.proto  Natasha_RLEG_4_linkMesh.proto  Natasha_TRUNKMesh.proto
src/simulacao/webots_natasha/protos/Natasha_textures/: NatashaTeamBack1b.proto  NatashaTeamBack1r.proto  NatashaTeamBack3b.proto  NatashaTeamBack3r.proto  NatashaTeamBack4b.proto  NatashaTeamBack4r.proto  NatashaTeamFront1b.proto  NatashaTeamFront2r.proto  NatashaTeamFront4b.proto  RedGloves.proto
src/simulacao/webots_natasha/scripts/: NatashaApi.py  behavior_central_controller.py  movement_controller.py  receiver.py  start.sh  supervisor.py  vision_controller.py  webots_launcher.py
src/simulacao/webots_natasha/urdf/: natasha.urdf  webots_natasha.csv  webots_natasha.urdf
src/simulacao/webots_natasha/worlds/: .kid.wbproj  .natasha_world.wbproj  kid.wbt  natasha_world.wbt
src/vision/object_finder/: CMakeLists.txt  package.xml  requirements.txt  setup.cfg  setup.py
src/vision/object_finder/data/: label_map.pbtxt  ssd_v1_edrom.config
src/vision/object_finder/launch/: game_mode.launch  test_mode.launch  vision.launch  vision.launch.py
src/vision/object_finder/object_finder/: connecting_and_showing.py  object_finder  running_inference.py
src/vision/object_finder/pre_trained_models/ssd_edrom/: model.ckpt.index
src/vision/object_finder/scripts/: generate_tfrecords.py  solve_annotations.py  train_val_sorter.py  xml_to_csv.py
src/vision/object_finder/src/: connecting_and_showing.py  connecting_and_showing_current_frame_robocup.py  drawing.py  finder.py  game_mode.py  image_processing.py  itens.py  programa.py  recording_from_camera.py  running_inference.py  running_inference_robocup.py  test_mode.py  teste.py  teste_camera.py  utils.py
src/vision/vision_msgs/: CMakeLists.txt  package.xml
src/vision/vision_msgs/msg/: Goal.msg  Leftgoalpost.msg  MultiObjects.msg  Objects.msg  Webotsmsg.msg
(+1468 files in other folders)
