<?xml version="1.0"?>
<package format="2">
  <name>modularized_bhv_msgs</name>
  <version>0.0.0</version>
  <description>
    modularized_bhv_msgs package
    This package includes ROS messages and services for humanoid_behaviour packages</description>
  <license>BSD</license>
  <maintainer email="edromufu@gmail.com">Equipe de Desenvolvimento em Robótica Móvel</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  
  <export></export>
</package>
