<?xml version="1.0"?>
<package format="2">
    
    <name>object_finder</name>
    <version>0.0.1</version>
    <description>The object_finder package</description>

    <maintainer email="jhonaspradomoura@gmail.com">jhonas</maintainer>


    <license>MIT</license>



    <buildtool_depend>catkin</buildtool_depend>
    <depend>opencv-python</depend>
    <depend>rospy</depend>
    <depend>cv_bridge</depend>
    <depend>sensor_msgs</depend>
    <depend>nodelet</depend>
    <depend>camera_info_manager</depend>
    <depend>rostest</depend>
    <depend>roslint</depend>
    <depend>message_generation</depend>
    <depend>message_runtime</depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
