<?xml version="1.0"?>
<package format="2">
    
    <name>object_finder</name>
    <version>0.0.1</version>
    <description>The object_finder package</description>

    <maintainer email="edromufu@gmail.com">EDROM</maintainer>


    <license>MIT</license>

    
    <exec_depend>opencv-python</exec_depend>
    <depend>rclpy</depend>
    <depend>cv_bridge</depend>
    <depend>sensor_msgs</depend>
    <depend>nodelet</depend>
    <depend>camera_info_manager</depend>
    <depend>rostest</depend>
    <depend>roslint</depend>
    
    <exec_depend>ros2launch</exec_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
      <build_type>ament_python</build_type>
    </export>
</package>
