<?xml version="1.0"?>
<package format="3">
  <name>vision_msgs</name>
  <version>0.0.1</version>
  <description>The vision_msgs package</description>
  
  <maintainer email="edromufu@gmail.com">EDROM</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
  






