<?xml version="1.0"?>
<package format="2">
  <name>behaviour_msgs</name>
  <version>0.0.0</version>
  <description>
    behaviour_msgs package
    This package includes ROS messages and services for humanoid_behaviour packages</description>
  <license>BSD</license>
  <author email="lorenacosta.ufu@gmail.com">Lorena Costa</author>
  <maintainer email="lorenacosta.ufu@gmail.com">Lorena Costa</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  
  <export></export>
</package>
