<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>modularized_bhv_msgs</name>
  <version>0.0.0</version>
  <description>modularized_bhv_msgs package
    This package includes ROS messages and services for humanoid_behaviour packages</description>
  <maintainer email="edromufu@gmail.com">Equipe de Desenvolvimento em Robótica Móvel</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
