<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>movement_core</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kirlin@todo.todo">kirlin</maintainer>
  <license>TODO</license>

  <depend>std_msgs</depend>
  <depend>humanoid_definition</depend>
  <depend>movement_functions</depend>
  <depend>movement_pages</depend>
  <depend>movement_utils</depend>
  <depend>sensor_msgs</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
