<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>movement_functions</name>
  <version>0.0.0</version>
  <description>The movement_functions package</description>
  <maintainer email="kirlin@todo.todo">kirlin</maintainer>
  <license>TODO</license>

  <depend>std_msgs</depend>
  <depend>kinematic_functions</depend> 

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
